# meal_planner_app

./: main.py  pyproject.toml
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: 61a59d23dc72_initial_migration.py  ebf4581cf79b_add_directions_and_saved_ingredients.py
components/: calendar.py  nutrition_charts.py  recipe_browser.py  recipe_form.py
data/: recipes.json
models/: database.py  recipe.py
utils/: nutrition.py  recipe_helper.py
